Fixed navigation alignment

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -9,7 +9,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .nav h1 {
@@ -21,6 +21,7 @@
   list-style: none;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 8%;
 }
 
